--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,8 @@
 {xref_checks, [undefined_function_calls]}.
 {erl_opts, [debug_info,
             warnings_as_errors,
-            {platform_define, "^[0-9]+", namespaced_types}]}.
+            {platform_define, "^[0-9]+", namespaced_types},
+            {parse_transform, lager_transform}]}.
 {cover_enabled, true}.
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
 {edoc_opts, [{preprocess, true}]}.
