--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - make
   - ./rebar3 update
 script:
-  - make test
+  - pkill -9 beam.smp; make test
   - make xref
   - make dialyzer
   - make lint
