--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ otp_release:
 install:
   - make
   - ./rebar3 update
+  - apt-get install -y openjdk-8-jdk mvn
 before_script:
   - epmd -daemon
 script:
@@ -15,4 +16,4 @@ script:
 notifications:
   slack: haslab:jhAnACJzswFtYwKXpbZzjbFq
   email: false
-sudo: false
+sudo: true
