--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ otp_release:
 install:
   - make
   - ./rebar3 update
-  - apt-get install -y openjdk-8-jdk mvn
+#  - sudo apt-get install -y openjdk-8-jdk mvn
 before_script:
   - epmd -daemon
 script:
