--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,13 @@ otp_release:
 install:
   - make
   - ./rebar3 update
-#  - sudo apt-get install -y openjdk-8-jdk mvn
 before_script:
   - epmd -daemon
 script:
-#  - make test
-#  - make xref
-#  - make dialyzer
-#  - make lint
+  - make test
+  - make xref
+  - make dialyzer
+  - make lint
   - make java-client-test
 notifications:
   slack: haslab:jhAnACJzswFtYwKXpbZzjbFq
