Add relx config to rebar.config

--- a/rebar.config
+++ b/rebar.config
@@ -74,3 +74,13 @@
       }
     ]
 }.
+
+{relx, [{release, {ldb, "0.0.1"}, [ldb]},
+        {extended_start_script, true},
+
+        {dev_mode, true},
+        {include_erts, false},
+
+        {vm_args, "config/vm.args"},
+
+        {overlay, [{copy, "bin/env", "bin"}]}]}.
