--- a/rebar.config
+++ b/rebar.config
@@ -12,7 +12,7 @@
 
 {profiles, [
     {test,  [
-        {plugins, [{rebar3_eqc, {git, "https://github.com/kellymclaughlin/rebar3-eqc-plugin.git", {tag, "0.0.10"}}}]}
+        {plugins, [{rebar3_eqc, {git, "https://github.com/kellymclaughlin/rebar3-eqc-plugin.git", {branch, "master"}}}]}
     ]},
     {lint,  [
         {plugins, [{rebar3_lint, {git, "https://github.com/project-fifo/rebar3_lint.git", {tag, "0.1.2"}}}]}
