Remove bin/env & config/vm.args & update rebar.config

--- a/rebar.config
+++ b/rebar.config
@@ -76,8 +76,4 @@
         {extended_start_script, true},
 
         {dev_mode, true},
-        {include_erts, false},
-
-        {vm_args, "config/vm.args"},
-
-        {overlay, [{copy, "bin/env", "bin"}]}]}.
+        {include_erts, false}]}.
