Clean rebar config

--- a/rebar.config
+++ b/rebar.config
@@ -1,21 +1,22 @@
 {deps, []}.
 
 {dialyzer_base_plt_apps, [kernel, stdlib, erts, sasl, eunit, syntax_tools, compiler, crypto]}.
-{xref_checks, [undefined_function_calls]}.
+{cover_enabled, true}.
 {erl_opts, [debug_info,
             warnings_as_errors,
             {platform_define, "^[0-9]+", namespaced_types},
             {parse_transform, lager_transform}]}.
-{cover_enabled, true}.
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
 {edoc_opts, [{preprocess, true}]}.
 
+{xref_checks, [undefined_function_calls]}.
+
 {profiles, [
-    {lint,  [
-        {plugins, [{rebar3_lint, {git, "https://github.com/project-fifo/rebar3_lint.git", {tag, "0.1.2"}}}]}
+    {lint, [
+        {plugins, [rebar3_lint]}
     ]},
     {docs, [
-        {deps, [{edown, ".*", {git, "https://github.com/uwiger/edown.git", {branch, "master"}}}]}
+        {deps, [edown]}
     ]}
 ]}.
 
