--- a/rebar.config
+++ b/rebar.config
@@ -13,10 +13,7 @@
 
 {profiles, [
     {lint, [
-        {plugins, [rebar3_lint]}
-    ]},
-    {docs, [
-        {deps, [edown]}
+        {plugins, [{rebar3_lint, {git, "https://github.com/project-fifo/rebar3_lint.git", {tag, "0.1.2"}}}]}
     ]}
 ]}.
 
