Use hex packages

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,13 @@
-{deps, []}.
+{deps, [
+        acceptor_pool,
+        ishikawa,
+        jsx,
+        lager,
+        partisan,
+        rand_compat,
+        time_compat,
+        types
+]}.
 
 {dialyzer_base_plt_apps, [kernel, stdlib, erts, sasl, eunit, syntax_tools, compiler, crypto]}.
 {cover_enabled, true}.
