Simplify rebar.config

--- a/rebar.config
+++ b/rebar.config
@@ -22,7 +22,7 @@
 
 {profiles, [
     {lint, [
-        {plugins, [{rebar3_lint, {git, "https://github.com/project-fifo/rebar3_lint.git", {tag, "0.1.2"}}}]}
+        {plugins, [rebar3_lint]}
     ]}
 ]}.
 
