add lmetrics as dependency

--- a/rebar.config
+++ b/rebar.config
@@ -6,7 +6,8 @@
         partisan,
         rand_compat,
         time_compat,
-        types
+        types,
+        lmetrics
 ]}.
 
 {dialyzer_base_plt_apps, [kernel, stdlib, erts, sasl, eunit, syntax_tools, compiler, crypto]}.
