--- a/rebar.config
+++ b/rebar.config
@@ -1,11 +1,8 @@
 {deps, [
-        acceptor_pool,
         jsx,
         lager,
-        partisan,
-        rand_compat,
-        time_compat,
-        types
+        types,
+        ranch
 ]}.
 
 {dialyzer_base_plt_apps, [kernel, stdlib, erts, sasl, eunit, syntax_tools, compiler, crypto]}.
