--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,8 @@
         jsx,
         lager,
         types,
-        ranch
+        ranch,
+        erlang_term
 ]}.
 
 {dialyzer_base_plt_apps, [kernel, stdlib, erts, sasl, eunit, syntax_tools, compiler, crypto]}.
